tests/baselines/reference/promiseIdentity2.errors.txt
tests/cases/compiler/promiseIdentity2.ts(11,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'IPromise_<string, number>', but here has type 'Promise_<any, string>'.


==== tests/cases/compiler/promiseIdentity2.ts (1 errors) ====
    interface IPromise_<T, V> {
        then<U, W>(callback: (x: T) => IPromise_<U, W>): IPromise_<U, W>;
    }
    interface Promise_<T, V> {
        then<U, W>(callback: (x: T) => Promise_<T, U>): Promise_<T, W>;
    }
    
    // error because T is string in the first declaration, and T is boolean in the second
    // Return type and callback return type are ok because T is any in this particular Promise
    var x: IPromise_<string, number>;
    var x: Promise_<any, string>;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'IPromise_<string, number>', but here has type 'Promise_<any, string>'.